fixed hero back-ground image, improved contact spacing and responsive media points

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,7 +63,7 @@ h1 .myName {
     align-items: flex-start;
     justify-content: center;
     height: 20vh;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/Hero.jpeg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../images/Hero.jpeg");
     background-size: cover;
     margin-bottom: 4%;
 }
@@ -240,8 +240,11 @@ h1 .myName {
     font-size: 18px;
     font-weight: 900;
     color: black;
-    margin: 1% 2% 5% 1%;
-    justify-content: space-between;
+    margin: 10% 2% 15% 1%;
+    text-decoration: none;
+}
+.address:hover {
+    border-bottom: 7px solid currentColor;
 }
 .contact {
     display: flex;
@@ -257,5 +260,13 @@ h1 .myName {
     }
     .address {
         font-size: 1.0em;
+    }
+}
+@media (min-width: 65em) {
+    .contact {
+        flex-direction: row;
+    }
+    .address {
+        font-size: 1.5em;
     }
 }
